# terseid

./: .botbox.json  .gitignore  AGENTS.md  Cargo.toml  README.md  spec.md
.agents/botbox/: .version  finish.md  merge-check.md  report-issue.md  start.md  triage.md  worker-loop.md
.agents/botbox/scripts/: .scripts-version  agent-loop.sh  dev-loop.sh
.beads/: issues.jsonl
.bones/: .gitattributes  .gitignore  config.toml
.bones/events/: 2026-02.events  current.events
scripts/: .scripts-version  agent-loop.sh  dev-loop.sh  reviewer-loop.sh
src/: children.rs  config.rs  error.rs  generate.rs  hash.rs  lib.rs  parse.rs  resolve.rs
