[package]
name = "terseid"
version = "0.1.1"
edition = "2024"
description = "Adaptive-length, collision-resistant short IDs"
license = "MIT"
repository = "https://github.com/bobisme/terseid"
readme = "README.md"
keywords = ["id", "short-id", "hash", "base36", "collision"]
categories = ["algorithms", "encoding"]
include = ["src/", "LICENSE", "README.md"]

[dependencies]
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
proptest = "1"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
